# church1936

./: .editorconfig  CHANGELOG.md  Dockerfile  LICENSE  README.md  church1936.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/: Church1936.hs  HaskellNumerals.hs
test/: Church1936Spec.hs  HaskellNumeralsSpec.hs  Spec.hs
